Fri Jul  6 18:20:50 2007  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/runner.rb: fix load path.

	* common.mk: fix "test" rule to run with "btest".

	* rubytest.rb, sample/test.rb: fix to show tests progress.

Fri Jul  6 15:37:48 2007  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_iterator.rb: fix test to 1.9 spec.

Fri Jul  6 15:21:25 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_interrupt): suppress a gcc's officious warning.

Fri Jul  6 14:57:12 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (keyword_to_name): constified.

	* ext/ripper/eventids2.c (token_to_eventid): ditto.

Fri Jul  6 14:50:40 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bootstraptest/runner.rb: added --quiet option.

Fri Jul  6 14:35:25 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (f_marg): wrap f_norm_arg assignment node with NODE_LIST.
	  [ruby-dev:31141]

Fri Jul  6 12:15:01 2007  Tanaka Akira  <akr@fsij.org>

	* test/ruby/sentgen.rb: new file.

	* test/ruby/test_assignment.rb: tests implemeneted using assignment
	  generator and emulator.

Fri Jul  6 03:06:58 2007  Koichi Sasada  <ko1@atdot.net>

	* insns.def: remove unused code.

	* compile.c (compile_massign): fix to invoke to_splat on
	  splat rhs (example: *a = *nil). [ruby-dev:31136]

	* bootstraptest/test_massign.rb: add tests for above.

	* compile.c (iseq_compile_each): disable excess optimization.
	  [ruby-dev:31126]

Fri Jul  6 02:08:25 2007  Koichi Sasada  <ko1@atdot.net>

	* insns.def: fix to invoke nil.to_splat on NODE_ARGSCAT.
	  [ruby-dev:31138].

	* bootstraptest/test_literal.rb: add tests for above.

Thu Jul  5 19:45:55 2007  Koichi Sasada  <ko1@atdot.net>

	* yarvcore.h: rename rb_control_frame_t#magic to flag.

	* vm.h: add VM_FRAME_TYPE() and VM_FRAME_FLAG().

	* cont.c, insnhelper.ci, insns.def, vm.c, vm_dump.c,
	  vm_evalbody.ci, yarvcore.c: apply above changes.

Thu Jul  5 19:16:14 2007  Koichi Sasada  <ko1@atdot.net>
