@@ -1,3 +1,10 @@
+Fri Jul  6 19:55:10 2007  Keiju Ishitsuka  <keiju@ruby-lang.org>
+
+	* lib/irb.rb: typo. Thanks, Giles Bowkett.
+
+	* lib/irb/completion.rb: support Ruby1.9 changing return value
+     	  String to Symbol for Object#methods, etc. [ruby-dev:31148].
+
 Fri Jul  6 18:20:50 2007  Koichi Sasada  <ko1@atdot.net>
 
 	* bootstraptest/runner.rb: fix load path.
